# AprilTag

./: .gitignore
apriltag-2016-12-01/: CMakeLists.txt  apriltag.c  apriltag.h  apriltag_family.c  apriltag_family.h
apriltag-2016-12-01/common/: image_u8.c  image_u8.h  matd.c  matd.h  zarray.c  zarray.h
python/: apriltag.py
